--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 
   "dependencies": {
     "hubot":         ">= 2.6.0 < 3.0.0",
-    "hubot-scripts": ">= 2.5.0 < 3.0.0"
+    "hubot-scripts": ">= 2.5.0 < 3.0.0",
+    "hubot-hipchat": "*"
   },
 
   "engines": {
