--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "hubot":         ">= 2.6.0 < 3.0.0",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "hubot-hipchat": "*",
-    "node-trello": "*"
+    "node-trello": "*",
+    "bang": "1.0.1",
+    "shellwords": "0.0.1",
+    "wolfram-node": "1.4.28"
   },
 
   "engines": {
