Add plusplus script and dependencies
Summary:
I added a [script](https://github.com/Khan/culture-cow/blob/sam-plusplus/scripts/plusplus.coffee) that allows things like

    @sam ++

    in Hipchat, and culture-cow will keep track of each person/thing's score and output it after each plusplus. It also treats @ signs and smarts smartly ([at]sam ++, sam ++, and sam++ are equivalent), prevents people from ++'ing themselves, and each person can only ++ a particular name once every two hours to prevent ++ spamming one person (I can do [at]alex ++ to give a point to @alopatin , but I can't plusplus him for another two hours. I can then proceed to plusplus other people that are awesome.)

    Pros:
    - We use this script a lot in our [club](https://github.com/calblueprint/bigblue/blob/master/scripts/plusplus.coffee) so it's been battle-tested for ~2 years now
    - Being plusplus'd feels nice

    Cons:
    - Kinda janky code although it is based off the official code at https://github.com/hubot-scripts/hubot-plusplus
    - It might cause some weird side-effects that I cannot see at the moment and break culture cow. Snaps.

Test Plan: Try ++'ing someone. Make sure that points work across rooms, and check the limitations mentioned in the summary.

Reviewers: csilvers

Subscribers: alex

Differential Revision: https://phabricator.khanacademy.org/D18276

--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "node-trello": "*",
     "bang": "1.0.1",
     "shellwords": "0.0.1",
-    "wolfram-node": "0.0.1"
+    "wolfram-node": "0.0.1",
+    "underscore": "latest",
+    "clark": "latest"
   },
 
   "engines": {
