--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
     "node-trello": "*",
     "bang": "1.0.1",
     "shellwords": "0.0.1",
-    "wolfram-node": "0.0.1",
-    "underscore": "latest",
-    "clark": "latest"
+    "wolfram-node": "0.0.1"
   },
 
   "engines": {
