--- a/package.json
+++ b/package.json
@@ -1,40 +1,36 @@
 {
   "name": "hosted-hubot",
   "version": "2.6.3",
-
   "author": "GitHub Inc.",
-
   "keywords": [
     "github",
     "hubot",
     "campfire",
     "bot"
   ],
-
   "description": "A simple helpful robot for your Company",
-
-  "licenses": [{
-    "type": "MIT",
-    "url": "https://github.com/github/hubot/raw/master/LICENSE"
-  }],
-
-  "repository" : {
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/github/hubot/raw/master/LICENSE"
+    }
+  ],
+  "repository": {
     "type": "git",
     "url": "https://github.com/github/hubot.git"
   },
-
   "dependencies": {
-    "hubot":         ">= 2.6.0 < 3.0.0",
-    "hubot-scripts": ">= 2.5.0 < 3.0.0",
-    "hubot-hipchat": "*",
-    "node-trello": "*",
     "bang": "1.0.1",
+    "hubot": ">= 2.6.0 < 3.0.0",
+    "hubot-hipchat": "*",
+    "hubot-scripts": ">= 2.5.0 < 3.0.0",
+    "node-trello": "*",
     "shellwords": "0.0.1",
+    "underscore": "^1.8.3",
     "wolfram-node": "0.0.1"
   },
-
   "engines": {
     "node": ">= 0.8.x",
-    "npm":  ">= 1.1.x"
+    "npm": ">= 1.1.x"
   }
 }
